	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
10/12
	* Probably official GS/NJ Job Exp [Playtester]
10/09
	* Fixed High Quality Sandals not being refinable [Playtester]
10/08
	* Probably final drop rate increase [Playtester]
10/06
	* Reverted size fix for Guns and Shuriken [Playtester]
	- it appears they are 100% to all after all
10/05
	* Selling price of Broken Pieces 10z -> 400z [Playtester]
	* Raised the drop rates of most combo equips [Playtester]
10/04
	* Raised level of Kiel MVP skills [Playtester]
10/01
	* Adjusted drop rates thanks to info from Tharis [Playtester]
	* Updated view ids of some headgears [Playtester]
	- beware of crashes when your client is too old
09/29
	* Fully official Ktullanux stats [Playtester]
	* Official X.4 item scripts [Playtester]
	* Fixed Gunslinger job bonus [Playtester]
	* Official X.4 aspd values for GS, NJ and SG [Playtester] 
09/28
	* Raised drop rate of some MVP drops [Playtester]
	- also added Morrigan's Manteau to Thanatos drops
09/27
	* Raised skill casting rate for Rachel mobs [Playtester]
09/25
	* Fixed item group 35 (lottobox) in item_misc.txt [Skotlex]
	* Added Ninja/Gunslinger job exp as separate exp chart [Playtester]
	* Immaterial Sword now has a 3% chance of reducing target's sp by 30% [Playtester]
09/23
	* Now Valkyrie Randgris will only resummon when she has less than 3 slaves [Playtester]
09/21
	* Implemented Rachel Sanctuary mob skills [Playtester]
09/18
	* Corrected Ki Explosion to have range 1 and to take your weapon's element.
	  [Skotlex]
	* Fixing Holden combo not draining sp correctly [Playtester]
	* Added official Rachel Sanctuary mob stats [Playtester]