@@ -978,7 +978,7 @@
 //-- HFLI_SPEED
 8011,0,0,0,60000:55000:50000:45000:40000,60000:70000:80000:90000:120000
 //-- HVAN_CAPRICE
-8013,700:1400:2100:2800:3500,0,1000:1200:1400:1600:1800,0,1000:1200:1400:1600:1800
+8013,0,1000:1200:1400:1600:1800,0,0,0
 //-- HVAN_CHAOTIC
 8014,0,0,1000,0,1000
 //-- HVAN_EXPLOSION
